tests/invalid_nodepend/test_with_type.err_exp
test_with_type.m:016: In type declaration for predicate
test_with_type.m:016:   `test_with_type.with_type_1':
test_with_type.m:016:   error: expected the type after `with_type' to be a
test_with_type.m:016:   [38;5;40mhigher order predicate type,[39;49m but [38;5;203mit is not.[39;49m
test_with_type.m:017: In mode declaration for `test_with_type.with_type_1':
test_with_type.m:017:   error: expected the inst after `with_inst' to be a
test_with_type.m:017:   [38;5;40mhigher order inst,[39;49m but [38;5;203mit is not.[39;49m
test_with_type.m:022: In type declaration for function
test_with_type.m:022:   `test_with_type.with_type_2':
test_with_type.m:022:   error: expected the type after `with_type' to be a
test_with_type.m:022:   [38;5;40mhigher order function type,[39;49m but [38;5;203mit is not.[39;49m
test_with_type.m:023: Error: `:- mode' declaration for function [38;5;87m`with_type_2'/3[39;49m
test_with_type.m:023:   [38;5;203mwithout[39;49m a corresponding `:- func' declaration.
test_with_type.m:025: In the declaration of predicate `with_type_3':
test_with_type.m:025:   error: the `with_type` and `with_inst` annotations are
test_with_type.m:025:   [38;5;203mincompatible,[39;49m because they specify [38;5;171mtwo types[39;49m but [38;5;171mthree[39;49m
test_with_type.m:025:   [38;5;171mmodes.[39;49m
test_with_type.m:028: Error: a predicate declaration that specifies a
test_with_type.m:028:   [38;5;171mdeterminism[39;49m [38;5;203mmay not also specify[39;49m a [38;5;171m`with_inst'[39;49m
test_with_type.m:028:   [38;5;171mannotation.[39;49m This is because the `with_inst' annotation
test_with_type.m:028:   itself also specifies a determinism.
test_with_type.m:031: Error: a predicate declaration that specifies a
test_with_type.m:031:   [38;5;171m`with_inst' annotation[39;49m [38;5;203mmust also specify[39;49m a [38;5;171m`with_type'[39;49m
test_with_type.m:031:   [38;5;171mannotation[39;49m to specify the types of the arguments it
test_with_type.m:031:   adds.
test_with_type.m:034: Error: [38;5;87m`foo'[39;49m [38;5;203mis not a valid determinism.[39;49m
test_with_type.m:036: Error: a predicate declaration that does not specify
test_with_type.m:036:   [38;5;171margument modes[39;49m [38;5;203mmay not specify[39;49m a [38;5;171m`with_inst'[39;49m
test_with_type.m:036:   [38;5;171mannotation.[39;49m
